# routes/api.php
@@ -10,6 +10,7 @@ Route::post('/login', [AuthController::class, 'login']);
 
 Route::middleware('multi.auth')->group(function () {
     Route::post('/logout', [AuthController::class, 'logout']);
+    Route::post('/refresh', [AuthController::class, 'refresh']);
     Route::get('/user', function (Request $request) {
         return $request->user();
     });
